[gd_scene load_steps=13 format=3 uid="uid://dxxqcf7217w5c"]

[ext_resource type="PackedScene" uid="uid://bgi1biyxae5se" path="res://scenes/guis/bars/skill_upgrade_bars/damage_upgrade_bar.tscn" id="1_aubha"]
[ext_resource type="Script" path="res://scenes/guis/menus/skill_upgrade_menu.gd" id="1_kt8br"]
[ext_resource type="PackedScene" uid="uid://bgvo1p6cxw5vy" path="res://scenes/guis/bars/skill_upgrade_bars/bullet_speed_upgrade_bar.tscn" id="2_krs1y"]
[ext_resource type="PackedScene" uid="uid://vyr4kyt2ebvn" path="res://scenes/guis/bars/skill_upgrade_bars/reload_upgrade_bar.tscn" id="3_y7rae"]
[ext_resource type="PackedScene" uid="uid://wx6yjcyyqn4r" path="res://scenes/guis/bars/skill_upgrade_bars/health_upgrade_bar.tscn" id="5_7sof0"]
[ext_resource type="PackedScene" uid="uid://dl1chp2bfy2gk" path="res://scenes/guis/bars/skill_upgrade_bars/regeneration_upgrade_bar.tscn" id="6_gvcux"]
[ext_resource type="PackedScene" uid="uid://bqfxx6rtq26e1" path="res://scenes/guis/bars/skill_upgrade_bars/precision_upgrade_bar.tscn" id="7_mk8lv"]
[ext_resource type="PackedScene" uid="uid://dxw6qpdftspnw" path="res://scenes/guis/bars/skill_upgrade_bars/player_speed_upgrade_bar.tscn" id="8_ttwwv"]
[ext_resource type="PackedScene" uid="uid://gs0duosw6tsu" path="res://scenes/guis/bars/level_bar/level_bar.tscn" id="9_4nj6s"]
[ext_resource type="Texture2D" uid="uid://dunsv2k0t2jmx" path="res://assets/images/bars/upgrade_skill_bar/currencies/rounded_bg.png" id="10_iu58b"]
[ext_resource type="Texture2D" uid="uid://xja26vfcds56" path="res://assets/images/bars/upgrade_skill_bar/currencies/crystal_icon.png" id="11_e82na"]
[ext_resource type="Texture2D" uid="uid://bd802kafptm6u" path="res://assets/images/bars/upgrade_skill_bar/currencies/small_rounded_bg.png" id="11_vg8cc"]

[node name="skill_upgrade_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kt8br")

[node name="DamageUpgradeBar" parent="." instance=ExtResource("1_aubha")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_top = 56.0
offset_right = 352.0
offset_bottom = 96.0

[node name="BulletSpeedUpgradeBar" parent="." instance=ExtResource("2_krs1y")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_top = 104.0
offset_right = 352.0
offset_bottom = 144.0

[node name="ReloadUpgradeBar" parent="." instance=ExtResource("3_y7rae")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 24.0
offset_top = 152.0
offset_right = 352.0
offset_bottom = 192.0
grow_horizontal = 1
grow_vertical = 1

[node name="PrecisionUpgradeBar" parent="." instance=ExtResource("7_mk8lv")]
layout_mode = 1
offset_left = 24.0
offset_top = 200.0
offset_right = -1568.0
offset_bottom = -840.0

[node name="PlayerSpeedUpgradeBar" parent="." instance=ExtResource("8_ttwwv")]
layout_mode = 1
offset_left = 24.0
offset_top = 248.0
offset_right = -1568.0
offset_bottom = -792.0

[node name="HealthUpgradeBar" parent="." instance=ExtResource("5_7sof0")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -352.0
offset_top = 56.0
offset_right = -352.0
offset_bottom = 56.0
grow_horizontal = 0
grow_vertical = 1

[node name="RegenerationUpgradeBar" parent="." instance=ExtResource("6_gvcux")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -352.0
offset_top = 104.0
offset_right = -352.0
offset_bottom = 104.0
grow_horizontal = 0
grow_vertical = 1

[node name="LevelBar" parent="." instance=ExtResource("9_4nj6s")]
layout_mode = 1
offset_top = 3.0
offset_bottom = 3.0

[node name="SkillPoints" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelBg" type="Sprite2D" parent="SkillPoints"]
position = Vector2(164, 30)
texture = ExtResource("10_iu58b")

[node name="Label" type="Label" parent="SkillPoints"]
layout_mode = 0
offset_left = 24.0
offset_top = 17.0
offset_right = 304.0
offset_bottom = 43.0
text = "No skill points information"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crystals" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = -8.0
offset_bottom = 32.0
grow_horizontal = 0

[node name="LabelBg" type="Sprite2D" parent="Crystals"]
position = Vector2(-172, 40)
texture = ExtResource("11_vg8cc")

[node name="CrystalIcon" type="Sprite2D" parent="Crystals"]
position = Vector2(-137, 40.0001)
rotation = 0.191986
scale = Vector2(0.379729, 0.3723)
texture = ExtResource("11_e82na")

[node name="Label" type="Label" parent="Crystals"]
layout_mode = 0
offset_left = -208.0
offset_top = 27.0
offset_right = -136.0
offset_bottom = 53.0
text = "No info."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="upgrade_skill_button_pressed" from="DamageUpgradeBar" to="." method="_on_damage_upgrade_bar_upgrade_skill_button_pressed"]
[connection signal="upgrade_skill_button_pressed" from="BulletSpeedUpgradeBar" to="." method="_on_bullet_speed_upgrade_bar_upgrade_skill_button_pressed"]
[connection signal="upgrade_skill_button_pressed" from="ReloadUpgradeBar" to="." method="_on_reload_upgrade_bar_upgrade_skill_button_pressed"]
[connection signal="upgrade_skill_button_pressed" from="PrecisionUpgradeBar" to="." method="_on_precision_upgrade_bar_upgrade_skill_button_pressed"]
[connection signal="upgrade_skill_button_pressed" from="PlayerSpeedUpgradeBar" to="." method="_on_player_speed_upgrade_bar_upgrade_skill_button_pressed"]
[connection signal="upgrade_skill_button_pressed" from="HealthUpgradeBar" to="." method="_on_health_upgrade_bar_upgrade_skill_button_pressed"]
[connection signal="upgrade_skill_button_pressed" from="RegenerationUpgradeBar" to="." method="_on_regeneration_upgrade_bar_upgrade_skill_button_pressed"]
